--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,21 @@
-<p>login works!</p>
+<div class="container py-12">
+    <h1 class="text-3xl mb-8">Log Into Your Account</h1>
+
+    <form (ngSubmit)="onSubmit()" #form="ngForm">
+        <div class="form-control mb-2 max-w-sm">
+            <label class="label" for="username">Username</label>
+            <input class="input input-bordered" type="text" name="username" id="username" [(ngModel)]="data.username"
+                required>
+        </div>
+        <div class="form-control mb-2 max-w-sm">
+            <label class="label" for="password">Password</label>
+            <input class="input input-bordered" type="password" name="password" id="password"
+                [(ngModel)]="data.password" required>
+        </div>
+
+        <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Login</button>
+        <p>
+            <a routerLink="/signup">Create an account</a>
+        </p>
+    </form>
+</div>
