--- a/src/app/pages/contact-list/contact-list.component.html
+++ b/src/app/pages/contact-list/contact-list.component.html
@@ -24,8 +24,17 @@
 
         <tbody>
             <tr *ngFor="let contact of contacts">
-                <td></td>
-                <td>{{contact.first_name}} {{contact.last_name}}</td>
+                <td>
+                    <div class="avatar">
+                        <div class="w-12 rounded-full">
+                            <!-- <img src="https://placeimg.com/192/192/people" /> -->
+                            <img [src]="'http://localhost:8080/photos/'+contact.thumbnail" />
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <span class="capitalize">{{contact.first_name}} {{contact.last_name}}</span>
+                </td>
                 <td>{{contact.email}}</td>
                 <td>{{contact.contact_num}}</td>
                 <td>
